Donate forms POST method

--- a/src/templates/components/donate-confirm.twig
+++ b/src/templates/components/donate-confirm.twig
@@ -35,7 +35,7 @@
     <div class="donate-next">
       <div class="donate-next__heading">Take the Next Step</div>
       <div class="donate-next__subheading">Help keep us going with a recurring monthly contribution.</div>
-      <form class="donate-next__form donate-form__fields donate-shortform">
+      <form class="donate-next__form donate-form__fields donate-shortform" method="POST">
         {% include 'components/price-select' %}
         <div class="donate-form__actions">
           <button type="submit" class="btn donate-form__action--solid" disabled>Contribute</button>
