--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -149,7 +149,7 @@
             </div>
             <div class="input-block">
               <input type="text" name="ccZip" id="cc-zip">
-              <label for="cc-zip">ZIP</label>
+              <label for="cc-zip">ZIP Code</label>
             </div>
             <div class="checkbox-input">
               <input type="checkbox" name="save" id="save">
