--- a/src/templates/components/donate-quickpay.twig
+++ b/src/templates/components/donate-quickpay.twig
@@ -5,7 +5,7 @@
   <h2 class="donate-form__subheading">Be a force for change.</h2>
 
   <div class="donate-next">
-    <form class="donate-next__form donate-form__fields donate-shortform">
+    <form class="donate-next__form donate-form__fields donate-shortform" method="POST">
       {% include 'components/price-select' %}
       <div class="donate-form__actions">
         <button type="submit" class="btn donate-form__action--solid" disabled>Contribute</button>
