--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -1,3 +1,18 @@
-a {
+a:link,
+a:visited,
+a:active {
   text-decoration: none;
+  transition: all .3s;
+
+  &:hover {
+    color: $azure;
+
+    svg {
+      fill: $azure;
+    }
+  }
+
+  svg {
+    transition: all .3s;
+  }
 }
