--- a/src/styles/components/_home-carousel.scss
+++ b/src/styles/components/_home-carousel.scss
@@ -100,20 +100,28 @@
 
 
   &__slide-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: $white;
-    background-color: rgba(0, 171, 255, 0.75);
-    background-blend-mode: multiply;
-    opacity: 0;
-    transition: all .3s;
+    &:active,
+    &:link,
+    &:visited {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      color: $white;
+      background-color: rgba(0, 171, 255, 0.75);
+      background-blend-mode: multiply;
+      opacity: 0;
+      transition: all .3s;
+
+      &:hover {
+        color: $white;
+      }
+    }
   }
 
 
@@ -145,6 +153,7 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
+    position: relative;
     @include font(roboto-condensed-bold);
     @include respond((
       max-width: auto null 223px,
