--- a/src/styles/components/_join.scss
+++ b/src/styles/components/_join.scss
@@ -55,9 +55,8 @@
     display: table;
     margin: auto;
     width: 145px;
-    @include font(roboto-condensed-bold);
+    @include btn--azure;
     @include respond((
-      background-color: $azure,
       font-size: 18px,
       height: 50px null 36px,
       margin-top: 30px,
