Animated underline refactor

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,7 @@
 @import 'components/signers-modal';
 @import 'components/share-modal';
 @import 'components/price-select';
+@import 'components/animated-underline';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
