--- a/src/templates/components/cta-grid.twig
+++ b/src/templates/components/cta-grid.twig
@@ -10,13 +10,13 @@
 
     <div class="cta-grid__grid">
       <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text"><span>Sign a Petition</span></p>
+        <p class="cta-grid__text animated-underline"><span>Sign a Petition</span></p>
       </a>
       <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text"><span>Support a Campaign</span></p>
+        <p class="cta-grid__text animated-underline"><span>Support a Campaign</span></p>
       </a>
       <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text"><span>Attend an Event</span></p>
+        <p class="cta-grid__text animated-underline"><span>Attend an Event</span></p>
       </a>
     </div>
 
