--- a/src/templates/components/cta-grid.twig
+++ b/src/templates/components/cta-grid.twig
@@ -1,24 +1,26 @@
 <section class="cta-grid">
-  <div class="cta-grid__content">
+  <div class="container">
+    <div class="cta-grid__content">
 
-    <h2 class="cta-grid__heading">
-      SHOWING UP
-    </h2>
-    <h3 class="cta-grid__subheading">
-      Looking to get involved, but unsure where to start? We’re here to help you take the first step.
-    </h3>
+      <h2 class="cta-grid__heading">
+        SHOWING UP
+      </h2>
+      <h3 class="cta-grid__subheading">
+        Looking to get involved, but unsure where to start? We’re here to help you take the first step.
+      </h3>
 
-    <div class="cta-grid__grid">
-      <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text animated-underline"><span>Sign a Petition</span></p>
-      </a>
-      <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text animated-underline"><span>Support a Campaign</span></p>
-      </a>
-      <a href="#" class="cta-grid__item">
-        <p class="cta-grid__text animated-underline"><span>Attend an Event</span></p>
-      </a>
+      <div class="cta-grid__grid">
+        <a href="#" class="cta-grid__item">
+          <p class="cta-grid__text animated-underline"><span>Sign a Petition</span></p>
+        </a>
+        <a href="#" class="cta-grid__item">
+          <p class="cta-grid__text animated-underline"><span>Support a Campaign</span></p>
+        </a>
+        <a href="#" class="cta-grid__item">
+          <p class="cta-grid__text animated-underline"><span>Attend an Event</span></p>
+        </a>
+      </div>
+
     </div>
-
   </div>
 </section>
