--- a/src/templates/components/home-carousel.twig
+++ b/src/templates/components/home-carousel.twig
@@ -1,74 +1,74 @@
 <section class="home-carousel">
-  <div class="home-carousel__content">
+  <div class="container">
+    <div class="home-carousel__content">
 
-    <div class="home-carousel__heading-group">
-      <h2 class="home-carousel__heading">AFFECTING REAL CHANGE</h2>
-      <p class="home-carousel__subheading">Our members walk the walk, taking on big issues and fighting until real change is made.</p>
+      <div class="home-carousel__heading-group">
+        <h2 class="home-carousel__heading">AFFECTING REAL CHANGE</h2>
+        <p class="home-carousel__subheading">Our members walk the walk, taking on big issues and fighting until real change is made.</p>
+      </div>
+
+      <div class="home-carousel__carousel">
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide1.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide2.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide3.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide1.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide2.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+          <div class="home-carousel__slide">
+            <figure class="home-carousel__image">
+              <img src="/images/home-carousel-slide3.jpg" alt="">
+            </figure>
+            <a href="#" class="home-carousel__slide-content">
+              <div class="home-carousel__eyebrow">News</div>
+              <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
+            </a>
+          </div>
+      </div>
+
+      <a href="#" class="btn home-carousel__cta">
+        See all victories
+        {% include 'components/svg' with {id: 'caret-right'} only %}
+      </a>
+
     </div>
-
-    <div class="home-carousel__carousel">
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide1.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide2.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide3.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide1.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide2.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-        <div class="home-carousel__slide">
-          <figure class="home-carousel__image">
-            <img src="/images/home-carousel-slide3.jpg" alt="">
-          </figure>
-          <a href="#" class="home-carousel__slide-content">
-            <div class="home-carousel__eyebrow">News</div>
-            <h3 class="home-carousel__title">Trumpcare Again<br>Defeated in Senate</h3>
-          </a>
-        </div>
-    </div>
-
-    <a href="#" class="btn home-carousel__cta">
-      See all victories
-      {% include 'components/svg' with {id: 'caret-right'} only %}
-    </a>
-
-
-
   </div>
 </section>
