--- a/src/templates/components/home-illustration.twig
+++ b/src/templates/components/home-illustration.twig
@@ -1,42 +1,43 @@
 <section class="home-illustration">
 
   <div class="home-illustration__section home-illustration__top">
-
-    <h2 class="home-illustration__heading"><span>Who We Are</span></h2>
-
-    <div class="home-illustration__content">
-      <h3 class="home-illustration__content-heading">
-        Championing Progressive Values
-      </h3>
-      <p class="home-illustration__body">
-        Whether it’s supporting a candidate for president or working to support immigration, our members are committed to a inclusive and progressive future.
-      </p>
-      <a href="#" class="btn home-illustration__cta">
-        Learn More About Us
-        {% include 'components/svg' with {id: 'caret-right'} only %}
-      </a>
-      <a href="#" class="btn home-illustration__cta">
-        Join the Movement
-        {% include 'components/svg' with {id: 'caret-right'} only %}
-      </a>
+    <div class="container">
+        <h2 class="home-illustration__heading"><span>Who We Are</span></h2>
+        <div class="home-illustration__content">
+          <h3 class="home-illustration__content-heading">
+            Championing Progressive Values
+          </h3>
+          <p class="home-illustration__body">
+            Whether it’s supporting a candidate for president or working to support immigration, our members are committed to a inclusive and progressive future.
+          </p>
+          <a href="#" class="btn home-illustration__cta">
+            Learn More About Us
+            {% include 'components/svg' with {id: 'caret-right'} only %}
+          </a>
+          <a href="#" class="btn home-illustration__cta">
+            Join the Movement
+            {% include 'components/svg' with {id: 'caret-right'} only %}
+          </a>
+        </div>
     </div>
-
   </div>
 
   <div class="home-illustration__section home-illustration__bottom">
-    <div class="home-illustration__content">
-      <h3 class="home-illustration__content-heading">
-        Focusing On Big Issues
-      </h3>
-      <div class="home-illustration__body">
-        <p>Our values manifest themselves in the issues we target. Here are just a few of our focus areas:</p>
-        <br>
-        <p>
-          2018 Elections <br>
-          Tax Reform <br>
-          Immigration <br>
-          Healthcare <br>
-        </p>
+    <div class="container">
+      <div class="home-illustration__content">
+        <h3 class="home-illustration__content-heading">
+          Focusing On Big Issues
+        </h3>
+        <div class="home-illustration__body">
+          <p>Our values manifest themselves in the issues we target. Here are just a few of our focus areas:</p>
+          <br>
+          <p>
+            2018 Elections <br>
+            Tax Reform <br>
+            Immigration <br>
+            Healthcare <br>
+          </p>
+        </div>
       </div>
     </div>
   </div>
