--- a/src/templates/components/testimonial.twig
+++ b/src/templates/components/testimonial.twig
@@ -1,5 +1,6 @@
 <div class="testimonial">
-  <div class="testimonial__content">
+  <div class="container">
+    <div class="testimonial__content">
 
       <figure class="testimonial__image">
         <img src="/images/testimonial-image.jpg" alt="">
@@ -13,5 +14,6 @@
         <span class="clearfix"></span>
       </div>
 
+    </div>
   </div>
 </div>
