--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,6 +11,10 @@
     height: 57px null 130px,
   ));
 
+  .container {
+    position: relative;
+  }
+
   .logo {
     display: block;
     position: absolute;
