--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -30,6 +30,7 @@
   &__dialog {
     position: relative;
     width: 100%;
+    max-width: $bp-xl;
     max-height: 100%;
     overflow-y: auto;
     @include respond((
