--- a/src/templates/components/header.twig
+++ b/src/templates/components/header.twig
@@ -1,59 +1,60 @@
 <header id="header" class="header">
+  <div class="container">
+    <a href="/" class="logo">
+      <img src="/images/logo.svg" alt="Move On Logo">
+    </a>
 
-  <a href="/" class="logo">
-    <img src="/images/logo.svg" alt="Move On Logo">
-  </a>
-
-  <nav id="nav" class="nav">
-    <span class="nav__title">Menu</span>
-    <ul class="nav__primary">
-      <li class="nav__dropdown">
-        <a href="/">
-          Petitions
-          <button class="nav__primary__caret">
-            <svg><use xlink:href="#caret-down"/></svg>
-          </button>
-        </a>
-        <ul class="nav__primary__subnav">
-          <li><a href="/petition.html">Sublink</a></li>
-          <li><a href="/petition.html">Sublink</a></li>
-          <li><a href="/petition.html">Sublink</a></li>
-        </ul>
-      </li>
-      <li class="nav__dropdown">
-        <a href="/">
-          Campaigns
-          <button class="nav__primary__caret">
-            <svg><use xlink:href="#caret-down"/></svg>
-          </button>
-        </a>
-        <ul class="nav__primary__subnav">
-          <li><a href="#">Sublink 2</a></li>
-          <li><a href="#">Sublink 2</a></li>
-          <li><a href="#">Sublink 2</a></li>
-        </ul>
-      </li>
-      <li><a href="/">Events</a></li>
-      <li><a href="/">About Us</a></li>
-    </ul>
-    <div class="nav__secondary">
-      <ul class="nav__secondary__top">
-        <li><a href="#">News</a></li>
-        <li><a href="#">Store</a></li>
+    <nav id="nav" class="nav">
+      <span class="nav__title">Menu</span>
+      <ul class="nav__primary">
+        <li class="nav__dropdown">
+          <a href="/">
+            Petitions
+            <button class="nav__primary__caret">
+              <svg><use xlink:href="#caret-down"/></svg>
+            </button>
+          </a>
+          <ul class="nav__primary__subnav">
+            <li><a href="/petition.html">Sublink</a></li>
+            <li><a href="/petition.html">Sublink</a></li>
+            <li><a href="/petition.html">Sublink</a></li>
+          </ul>
+        </li>
+        <li class="nav__dropdown">
+          <a href="/">
+            Campaigns
+            <button class="nav__primary__caret">
+              <svg><use xlink:href="#caret-down"/></svg>
+            </button>
+          </a>
+          <ul class="nav__primary__subnav">
+            <li><a href="#">Sublink 2</a></li>
+            <li><a href="#">Sublink 2</a></li>
+            <li><a href="#">Sublink 2</a></li>
+          </ul>
+        </li>
+        <li><a href="/">Events</a></li>
+        <li><a href="/">About Us</a></li>
       </ul>
-      <ul class="nav__secondary__bottom">
-        <li><a href="#">Join</a></li>
-        <li><a href="/donate-v2.html">Donate</a></li>
-        <li><a href="/petition.html">{% include 'components/svg' with {id: 'document-add'} %}Start A Petition</a></li>
-      </ul>
-    </div>
+      <div class="nav__secondary">
+        <ul class="nav__secondary__top">
+          <li><a href="#">News</a></li>
+          <li><a href="#">Store</a></li>
+        </ul>
+        <ul class="nav__secondary__bottom">
+          <li><a href="#">Join</a></li>
+          <li><a href="/donate-v2.html">Donate</a></li>
+          <li><a href="/petition.html">{% include 'components/svg' with {id: 'document-add'} %}Start A Petition</a></li>
+        </ul>
+      </div>
 
-    <button class="nav__close">
-      {% include 'components/svg' with {id: 'close' } only %}
+      <button class="nav__close">
+        {% include 'components/svg' with {id: 'close' } only %}
+      </button>
+    </nav>
+
+    <button class="nav__toggle">
+      {% include 'components/svg' with {id: 'burger' } only %}
     </button>
-  </nav>
-
-  <button class="nav__toggle">
-    {% include 'components/svg' with {id: 'burger' } only %}
-  </button>
+  </div>
 </header>
