--- a/src/templates/components/join.twig
+++ b/src/templates/components/join.twig
@@ -1,30 +1,33 @@
 <sectin class="join">
+
+  <img src="/images/home-signup-image.jpg" alt="" class="join__bg">
+
   <div class="join__content">
 
-    <img src="/images/home-signup-image.jpg" alt="" class="join__bg">
+    <div class="container">
+      <h2 class="join__heading">Join the Movement</h2>
 
-    <h2 class="join__heading">Join the Movement</h2>
+      <form action="" class="join__form">
 
-    <form action="" class="join__form">
+        <div class="input-block">
+          <input type="text" id="name">
+          <label for="name">Name</label>
+        </div>
 
-      <div class="input-block">
-        <input type="text" id="name">
-        <label for="name">Name</label>
-      </div>
+        <div class="input-block">
+          <input type="email" id="email">
+          <label for="email">Email</label>
+        </div>
 
-      <div class="input-block">
-        <input type="email" id="email">
-        <label for="email">Email</label>
-      </div>
+        <div class="input-block">
+          <input type="text" id="zip">
+          <label for="zip">Zip Code</label>
+        </div>
 
-      <div class="input-block">
-        <input type="text" id="zip">
-        <label for="zip">Zip Code</label>
-      </div>
+        <button type="submit">Join MoveOn</button>
 
-      <button type="submit">Join MoveOn</button>
-
-    </form>
+      </form>
+    </div>
 
   </div>
 </sectin>
