--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -11,7 +11,7 @@
         <div style="display:none">{% include 'components/symbol/svg/sprite.symbol.svg' %}</div>
         <div class="wrapper">
           {% include 'components/header' %}
-          <div id="content" class="container">{% block content %}{% endblock %}</div>
+          <div id="content">{% block content %}{% endblock %}</div>
           {% include 'components/footer' %}
         </div>
         <script src="/scripts/vendors.js"></script>
