Donate page new design

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@
 @import "components/petition-details";
 @import "components/donate-form";
 @import "components/donate-form-v1";
+@import "components/donate-form-v3";
 @import "components/donate-terms";
 @import "components/donate-confirm";
 
