--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -4,6 +4,7 @@ $gray: #cacaca;
 $light-gray: #a7a7a7;
 $slate-gray: #696a6a;
 $dark-gray: #222222;
+$dark-gray-38: rgba(34, 34, 34, 0.38);
 $black: #000000;
 $cerulean: #0080bf;
 $azure: #00abff;
