--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@
 @import "components/donate-form-v1";
 @import "components/donate-form-v3";
 @import "components/donate-terms";
+@import "components/donate-terms-v3";
 @import "components/donate-confirm";
 
 // PAGE STYLES
