--- a/src/templates/components/donate-terms-v3.twig
+++ b/src/templates/components/donate-terms-v3.twig
@@ -1,21 +1,22 @@
 <div class="donate-terms">
   <div class="donate-terms__content">
-    <div class="donate-terms__column">
-      <p><strong>PERSONAL INFO</strong></p>
-      <p>Contributions to MoveOn Civic Action are not tax deductible as charitable contributions for federal income tax purposes.</p>
-      <p><strong>PRIVATE POLICY</strong></p>
-      <p>We do not share the information you've given us with unaffiliated groups without your explicit permission.</p>
-      <p><strong>FINANCIAL DONATIONS</strong></p>
-      <p>If you choose to make a donation to MoveOn.org Civic Action, your credit card information will be used only for this transaction through our secure online payment system. MoveOn.org Civic Action does not retain credit card information.</p>
-      <p>Under circumstances where we determine that members may be misusing our systems for malicious purposes (for example, using the numbers we provide to make harassing phone calls), such activities may be reported to law enforcement agencies. In such cases, MoveOn may release personally identifiable information, including name and address, to those agencies.</p>
-    </div>
-    <div class="donate-terms__column">
-      <p><strong>EMAIL FROM MOVEON CIVIC ACTION</strong></p>
+    <p>Contributions to MoveOn Civic Action are not tax deductible as charitable contributions for federal income tax purposes.</p>
+    <h4><a href="#">Privacy Policy</a></h4>
+    <p>We do not share the information you've given us with unaffiliated groups without your explicit permission.</p>
+    <h4>Financial Donations</h4>
+    <p>
+      If you choose to make a donation to MoveOn.org Civic Action, your credit card information will be used only for this transaction through our secure online payment system. MoveOn.org Civic Action does not retain credit card information.
+      <br>
+      Under circumstances where we determine that members may be misusing our systems for malicious purposes (for example, using the numbers we provide to make harassing phone calls), such activities may be reported to law enforcement agencies. In such cases, MoveOn may release personally identifiable information, including name and address, to those agencies.
+    </p>
+    <h4>Email from MoveOn.org Political Action and MoveOn.org Civic Action</h4>
+    <p>
       <p>
-        MoveOn will send you updates on this and other important campaigns by email. If at any time you would like to unsubscribe from our email list, you may do so by completing this form. For our complete privacy policy, click here. <br>
+        MoveOn will send you updates on this and other important campaigns by email. If at any time you would like to unsubscribe from our email list, you may do so by completing <a href="#">this form</a>. For our complete privacy policy, <a href="#">click here</a>.
+        <br>
         A website of MoveOn.org Civic Action.
       </p>
       <p>MoveOn.org Civic Action is a 501(c)(4) organization which primarily focuses on nonpartisan education and advocacy on important national issues. MoveOn.org Political Action is a federal political committee which primarily helps members elect candidates who reflect our values through a variety of activities aimed at influencing the outcome of the next election. MoveOn.org Political Action and MoveOn.org Civic Action are separate organizations.</p>
-    </div>
+    </p>
   </div>
 </div>
