--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,6 +51,8 @@
 @import "pages/petition";
 @import "pages/donate";
 @import "pages/donate-v1";
+@import "pages/donate-v3";
+@import "pages/donate-quickpay-v3";
 
 // VENDOR OVERRIDES
 @import "trumps/flickity";
