--- a/src/styles/components/_donate-form-v3.scss
+++ b/src/styles/components/_donate-form-v3.scss
@@ -76,8 +76,10 @@
     }
 
     .checkbox-input {
-      margin-top: 14px;
       margin-right: 0;
+      @include respond((
+        margin-top: 14px null 28px,
+      ));
 
       label {
         color: $black;
@@ -103,7 +105,7 @@
         }
         &:nth-child(3) {
           @include respond((
-            margin-left: 30px null 57px,
+            margin-left: 30px null 47px,
           ));
         }
         &:nth-child(5) {
@@ -113,7 +115,7 @@
         }
         &:nth-child(6) {
           @include respond((
-            margin-left: 21px null 48px,
+            margin-left: 21px null 40px,
           ));
         }
 
@@ -132,7 +134,7 @@
           margin-bottom: 0;
           @include respond((
             width: 157px null 182px,
-            margin-left: 10px null 24px,
+            margin-left: 10px null 20px,
           ));
 
           label {
