Update Donate v3 terms

--- a/src/templates/components/donate-terms-v3.twig
+++ b/src/templates/components/donate-terms-v3.twig
@@ -1,14 +1,17 @@
 <div class="donate-terms">
   <div class="donate-terms__content">
+    <h4>Contribution Rules</h4>
+    <p>I confirm that the following statements are true and accurate: 1) I am a United States citizen or a permanent resident alien. 2) This contribution is not made from the general treasury funds of a corporation, labor organization or national bank. 3) This contribution is not made from the treasury of an entity or person who is a federal contractor. 4) The funds I am donating are not being provided to me by another person or entity for the purpose of making this contribution. 5) If under 18: I am contributing knowingly and voluntarily with my own funds. </p>
+    <h4>Important Legal Information</h4>
+    <p>You may make contributions of up to $5,000 per calendar year to MoveOn.org Political Action. Your credit card information will be used only for this transaction through our secure online payment system. MoveOn.org Political Action does not retain credit card information or transmit credit card information to candidate committees. However, federal law requires us to report the name, address, occupation, and employer for each MoveOn.org Political Action contributor who gives more than $200 during each calendar year to the Federal Election Commission.</p>
+    <p>Contributions are not tax deductible for federal income tax purposes.</p>
+    <p>If we’re unable to use your contribution for the purpose you specify, either because of oversubscription or for another unforeseen reason, it is our policy to use your contribution for other advertising, public relations, advocacy or organizing activities.</p>
     <p>Contributions to MoveOn Civic Action are not tax deductible as charitable contributions for federal income tax purposes.</p>
     <h4><a href="#">Privacy Policy</a></h4>
     <p>We do not share the information you've given us with unaffiliated groups without your explicit permission.</p>
     <h4>Financial Donations</h4>
-    <p>
-      If you choose to make a donation to MoveOn.org Civic Action, your credit card information will be used only for this transaction through our secure online payment system. MoveOn.org Civic Action does not retain credit card information.
-      <br>
-      Under circumstances where we determine that members may be misusing our systems for malicious purposes (for example, using the numbers we provide to make harassing phone calls), such activities may be reported to law enforcement agencies. In such cases, MoveOn may release personally identifiable information, including name and address, to those agencies.
-    </p>
+    <p>If you choose to make a donation to MoveOn.org Civic Action, your credit card information will be used only for this transaction through our secure online payment system. MoveOn.org Civic Action does not retain credit card information.</p>
+    <p>Under circumstances where we determine that members may be misusing our systems for malicious purposes (for example, using the numbers we provide to make harassing phone calls), such activities may be reported to law enforcement agencies. In such cases, MoveOn may release personally identifiable information, including name and address, to those agencies.</p>
     <h4>Email from MoveOn.org Political Action and MoveOn.org Civic Action</h4>
     <p>
       <p>
