--- a/src/templates/components/cta-grid.twig
+++ b/src/templates/components/cta-grid.twig
@@ -11,13 +11,16 @@
 
       <div class="cta-grid__grid">
         <a href="#" class="cta-grid__item">
-          <p class="cta-grid__text animated-underline"><span>Sign a Petition</span></p>
+          {# <p class="cta-grid__text animated-underline"><span><span><i></i>Sign a<i></i></span><span><i></i>Petition<i></i></span></span></p> #}
+          <p class="cta-grid__text animated-underline">{{ 'Sign a Petition' | wrap-words }}</p>
         </a>
         <a href="#" class="cta-grid__item">
-          <p class="cta-grid__text animated-underline"><span>Support a Campaign</span></p>
+          {# <p class="cta-grid__text animated-underline"><span><span><i></i>Support a<i></i></span><span><i></i>Campaign<i></i></span></span></p> #}
+          <p class="cta-grid__text animated-underline">{{ 'Support a Campaign' | wrap-words }}</p>
         </a>
         <a href="#" class="cta-grid__item">
-          <p class="cta-grid__text animated-underline"><span>Attend an Event</span></p>
+          {# <p class="cta-grid__text animated-underline"><span><span><i></i>Attend an<i></i></span><span><i></i>Event<i></i></span></span></p> #}
+          <p class="cta-grid__text animated-underline">{{ 'Attend an Event' | wrap-words }}</p>
         </a>
       </div>
 
