--- a/src/templates/components/petition-card.twig
+++ b/src/templates/components/petition-card.twig
@@ -25,10 +25,10 @@
 
       <p>Communities need to be able to mobilize resources to fight this epidemic long-term.</p>
 
-      <a href="#" class="btn petition-card__more-cta">
+      <button href="#" class="btn petition-card__more-cta">
         See More
         {% include 'components/svg' with {id: 'caret-down'} only %}
-      </a>
+      </button>
 
     </div>
 
