Implement hero carousel

--- a/src/templates/components/home-hero.twig
+++ b/src/templates/components/home-hero.twig
@@ -1,25 +1,59 @@
 <div class="home-hero">
   <div class="container">
 
-    <figure class="home-hero__figure">
-      <img src="/images/home-hero.jpg" alt="">
-    </figure>
+    <div class="home-hero__image">
+      <div class="home-hero__image-carousel">
+        <figure class="home-hero__figure">
+          <img src="/images/home-hero.jpg" alt="">
+        </figure>
+        <figure class="home-hero__figure">
+          <img src="/images/home-hero.jpg" alt="">
+        </figure>
+        <figure class="home-hero__figure">
+          <img src="/images/home-hero.jpg" alt="">
+        </figure>
+      </div>
+    </div>
 
-    <div class="home-hero__text">
-
-      <h1 class="home-hero__heading">
-        <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
-      </h1>
-
-      <p class="home-hero__body">
-        <strong>OUR MESSAGE IS CLEAR:</strong> Now is the time for members of Congress to show that they are listening and acting on their constituent’s demand for the clean Dream Act—or begin facing the consequence.
-      </p>
-
-      <a href="#" class="home-hero__cta btn">
-        VIEW PETITION
-        {% include 'components/svg' with {id: 'caret-right'} %}
-      </a>
-
+    <div class="home-hero__content">
+      <div class="home-hero__content__carousel">
+        <div class="home-hero__text">
+          <h1 class="home-hero__heading">
+            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+          </h1>
+          <p class="home-hero__body">
+            <strong>OUR MESSAGE IS CLEAR:</strong> Now is the time for members of Congress to show that they are listening and acting on their constituent’s demand for the clean Dream Act—or begin facing the consequence.
+          </p>
+          <a href="#" class="home-hero__cta btn">
+            VIEW PETITION
+            {% include 'components/svg' with {id: 'caret-right'} %}
+          </a>
+        </div>
+        <div class="home-hero__text">
+          <h1 class="home-hero__heading">
+            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+          </h1>
+          <p class="home-hero__body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora quibusdam a dolore officia quo magni, quia id consequuntur repudiandae, ratione eum officiis autem. Vero vel sunt provident eligendi porro consequuntur!
+          </p>
+          <a href="#" class="home-hero__cta btn">
+            VIEW PETITION
+            {% include 'components/svg' with {id: 'caret-right'} %}
+          </a>
+        </div>
+        <div class="home-hero__text">
+          <h1 class="home-hero__heading">
+            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+          </h1>
+          <p class="home-hero__body">
+            Officiis quis debitis, nemo architecto iure, incidunt aut suscipit, quidem harum ea vero quibusdam fugiat modi. Assumenda, libero, doloribus!
+          </p>
+          <a href="#" class="home-hero__cta btn">
+            VIEW PETITION
+            {% include 'components/svg' with {id: 'caret-right'} %}
+          </a>
+        </div>
+      </div>
     </div>
 
   </div>
