--- a/src/styles/components/_home-hero.scss
+++ b/src/styles/components/_home-hero.scss
@@ -8,11 +8,41 @@
   }
 
 
-  &__figure {
+  &__image {
     @include aspect-ratio(1, 1);
     @include respond((
       width: null null percentage(775px/$bp-xl),
     ));
+  }
+
+
+  &__image-carousel {
+    &.flickity-enabled {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+    }
+
+    .flickity-page-dots {
+      @include respond((
+        display: null null none,
+        bottom: 24px,
+      ));
+    }
+
+    .dot {
+      background-color: $white;
+    }
+  }
+
+
+  &__figure {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
     img {
       position: absolute;
@@ -26,20 +56,99 @@
   }
 
 
-  &__text {
+  &__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: $azure;
+    position: relative;
+    @include respond((
+      width: null null percentage(665px/$bp-xl),
+      padding: (24px 16px) null (0 percentage(230px/1440px) 0 percentage(55px/1440px)),
+    ));
+
+    &__carousel {
+      position: relative;
+      width: 100%;
+      @include respond((
+        top: null null -50px,
+      ));
+
+      &.flickity-enabled {
+        .home-hero__text + .home-hero__text {
+          opacity: 1;
+        }
+        .home-hero__text:not(.is-selected) {
+          opacity: 0;
+        }
+      }
+
+      .flickity-page-dots {
+        @include respond((
+          display: none null block,
+          text-align: left,
+        ));
+
+        .dot {
+          background-color: $white;
+        }
+      }
+
+      .flickity-prev-next-button {
+        background-color: transparent;
+        width: 20px;
+        height: 20px;
+
+        &.previous {
+          left: percentage(-770/380);
+        }
+
+        &.next {
+          right: percentage(-170/380);
+        }
+
+        &:not([disabled]):hover {
+          .arrow {
+            fill: $black !important;
+          }
+        }
+
+        svg {
+          transition: none;
+        }
+
+        .arrow {
+          fill: $white;
+        }
+      }
+    }
+  }
+
+
+  &__text {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: opacity .3s;
     @include respond((
       display: null null flex,
       flex-direction: column,
       justify-content: center,
       align-items: flex-start,
-      padding: (24px 16px) null (0 percentage(155px/1440px)),
-      width: null null percentage(665px/$bp-xl),
     ));
+
+    & + & {
+      position: absolute;
+      opacity: 0;
+    }
   }
 
 
   &__heading {
+    @include respond((
+      margin-right: null null 83px,
+    ));
     span {
       background-color: $black;
       color: $azure;
